--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
      Logo Design
     </h1>
     <hr>
-     <button type="button" oneclick="locstion.href= 'https://www.fiverr.com'">
+     <button type="button" oneclick="location.href= 'https://www.fiverr.com'">
       Get a logo made for as low as 5.00 USD
      </button>
   <body>
