--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
      Logo Design
     </h1>
     <hr>
-     <button oneclick=window.location.href='https://www.fiverr.com';">
-      Get a logo made for as low as 5.00 USD
-     </button>
+     <form action"https://www.fiverr.com">
+         <input type="submit" value"Get a logo!" />
+    </form>
   <body>
  <html>
